# openglLearning

./: .gitignore  CMakeLists.txt  README.md  opengl.txt
include/: LoadShaders.h
include/glad/: glad.c  glad.h
src/: 1_1_Triangles.cpp  LoadShaders.cpp
